--- a/DesktopFiles/autoMiraWebApp.desktop
+++ b/DesktopFiles/autoMiraWebApp.desktop
@@ -1,9 +1,9 @@
 [Desktop Entry]
 Encoding=UTF-8
 Type=Application
-Name=pirScreenSaverTest
+Name=MiraWebApp
 Comment=
-Exec= python3 /home/pi/GitHub/Mira/pirDisableScreensaver.py
+Exec= chromium-browser --start-fullscreen /home/pi/GitHub/Mira/MiraWebApp/Mira.html
 StartupNotify=false
 Terminal=true
 Hidden=false
